--- a/config/recurring.yml
+++ b/config/recurring.yml
@@ -1,10 +1,8 @@
-# production:
-#   periodic_cleanup:
-#     class: CleanSoftDeletedRecordsJob
-#     queue: background
-#     args: [ 1000, { batch_size: 500 } ]
-#     schedule: every hour
-#   periodic_command:
-#     command: "SoftDeletedRecord.due.delete_all"
-#     priority: 2
-#     schedule: at 5am every day
+production:
+  import_suggestions:
+    class: ImportSuggestionsJob
+    priority: 50
+    schedule: 21 5 * * *
+    class: Competitions::Publishing::ReminderJob
+    priority: 40
+    schedule: 0 10 * * tue
