--- a/config/recurring.yml
+++ b/config/recurring.yml
@@ -1,8 +1,13 @@
 production:
+  competition_publishing_reminder_job:
+    class: 'Competitions::Publishing::ReminderJob'
+    priority: 40
+    schedule: 0 10 * * tue
   import_suggestions:
     class: ImportSuggestionsJob
     priority: 50
     schedule: 21 5 * * *
-    class: Competitions::Publishing::ReminderJob
-    priority: 40
-    schedule: 0 10 * * tue
+  solid_queue_debug:
+    class: SolidQueueDebugJob
+    priority: 10
+    schedule: '*/20 * * * *'
