--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -63,6 +63,8 @@ Lint/ConstantOverwrittenInRescue:
   Enabled: true
 Lint/ConstantReassignment:
   Enabled: true
+Lint/CopDirectiveSyntax:
+  Enabled: true
 Lint/DeprecatedConstants:
   Enabled: true
 Lint/DuplicateBranch:
@@ -107,6 +109,8 @@ Lint/RedundantDirGlobSort:
   Enabled: true
 Lint/RedundantRegexpQuantifiers:
   Enabled: true
+Lint/RedundantTypeConversion:
+  Enabled: true
 Lint/RefinementImportMethods:
   Enabled: true
 Lint/RequireRangeParentheses:
@@ -114,6 +118,8 @@ Lint/RequireRangeParentheses:
 Lint/RequireRelativeSelfPath:
   Enabled: true
 Lint/SharedMutableDefault:
+  Enabled: true
+Lint/SuppressedExceptionInNumberConversion:
   Enabled: true
 Lint/SymbolConversion:
   Enabled: true
@@ -129,6 +135,8 @@ Lint/UnmodifiedReduceAccumulator:
   Enabled: true
 Lint/UselessAssignment:
   AutoCorrect: false
+Lint/UselessConstantScoping:
+  Enabled: true
 Lint/UselessDefined:
   Enabled: true
 Lint/UselessNumericOperation:
@@ -203,6 +211,8 @@ Performance/StringInclude:
   Enabled: true
 Performance/Sum:
   Enabled: false
+Performance/ZipWithoutBlock:
+  Enabled: true
 RSpec/AnyInstance:
   Enabled: false
 RSpec/BeEmpty:
@@ -574,6 +584,8 @@ Style/RedundantEach:
   Enabled: true
 Style/RedundantFilterChain:
   Enabled: true
+Style/RedundantFormat:
+  Enabled: true
 Style/RedundantHeredocDelimiterQuotes:
   Enabled: true
 Style/RedundantInitialize:
@@ -618,9 +630,10 @@ Style/TrailingCommaInHashLiteral:
   EnforcedStyleForMultiline: comma
 Style/YAMLFileRead:
   Enabled: true
-require:
-- rubocop-factory_bot
+plugins:
 - rubocop-performance
 - rubocop-rails
 - rubocop-rspec
+require:
+- rubocop-factory_bot
 - rubocop-rspec_rails
