--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -478,6 +478,8 @@ Style/CombinableDefined:
   Enabled: true
 Style/CombinableLoops:
   Enabled: false
+Style/ComparableBetween:
+  Enabled: true
 Style/ComparableClamp:
   Enabled: false
 Style/ConcatArrayLiterals:
