--- a/config/storage.yml
+++ b/config/storage.yml
@@ -2,9 +2,13 @@ test:
   service: Disk
   root: <%= Rails.root.join("tmp/storage") %>
 
-local:
+development:
   service: Disk
   root: <%= Rails.root.join("private/storage") %>
+
+production:
+  service: Disk
+  root: /srv/feusport/shared/private/storage
 
 # Use bin/rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
